--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 {
     "title":        "://argon.red",
     "url":          "https://argon.red",
-    "baseurl":      "/test",
+    "baseurl":      "",
     "permalink":    "/posts/:slug",
 
     "lang":         "zh",
@@ -9,12 +9,12 @@
     "date_format":  "%Y/%m/%d",
 
     "defaults": [{
-        "scope": {"path": ""},
-        "values": {"layout": "default"}
+        "scope":    { "path": "" },
+        "values":   { "layout": "default" }
     }],
 
     "kramdown": {
         #  This is annoying for a typographer.
-        "smart_quotes": ["apos", "apos", "quot", "quot"]
+        "smart_quotes": [ "apos", "apos", "quot", "quot" ]
     }
 }
