--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,11 @@
 {
     "title":        "://argon.red",
     "url":          "https://argon.red",
-    "baseurl":      "",
+    "baseurl":      "/test",
     "permalink":    "/posts/:slug",
 
     "lang":         "zh",
+    "encoding":     "utf-8",
     "timezone":     "Asia/Shanghai",
     "date_format":  "%Y/%m/%d",
 
@@ -18,7 +19,6 @@
     },
 
     "include":      [ "_pages" ],
-    "exclude":      [ "Gemfile", "CNAME", "LICENSE", "README.md" ],
 
     "markdown":     "GFM",
 
